# zvecsearch

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.ko.md  README.md  pyproject.toml
benchmarks/: __init__.py  conftest.py  metrics.py  test_phase1_dataset.py  test_phase2_retrieval.py  test_phase3_quality.py  test_phase4_performance.py  test_phase5_embeddings.py
benchmarks/data/: ground_truth.json
docs/plans/: 2026-02-18-zvec-native-refactoring-design.md  2026-02-18-zvecsearch-design.md  2026-02-18-zvecsearch-implementation.md
scripts/: README.md  test_default_local.py  test_gemini_embedding.py  test_zvecsearch_gemini.py
src/zvecsearch/: __init__.py  __main__.py  chunker.py  cli.py  compact.py  config.py  core.py  scanner.py  store.py  transcript.py  watcher.py
src/zvecsearch/embeddings/: __init__.py  google.py  local.py  ollama.py  openai.py  voyage.py
tests/: test_chunker.py  test_cli.py  test_compact.py  test_config.py  test_core.py  test_embeddings.py  test_integration.py  test_korean_stress.py  test_scanner.py  test_store.py  test_stress.py  test_watcher.py
