[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "zvecsearch"
version = "0.1.0"
description = "Semantic memory search powered by zvec vector database"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "zvec>=0.1.0",
    "click>=8.1",
    "watchdog>=4.0",
    "tomli_w>=1.0",
    "openai>=1.0",
]

[project.optional-dependencies]
google = ["google-genai>=1.0"]
voyage = ["voyageai>=0.3"]
ollama = ["ollama>=0.4"]
local = ["sentence-transformers>=3.0"]
anthropic = ["anthropic>=0.40"]
all = [
    "google-genai>=1.0",
    "voyageai>=0.3",
    "ollama>=0.4",
    "sentence-transformers>=3.0",
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
]

[project.scripts]
zvecsearch = "zvecsearch.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
