[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "zvecsearch"
version = "0.1.0"
description = "Semantic memory search powered by zvec vector database"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "zvec>=0.2.0",
    "click>=8.1",
    "watchdog>=4.0",
    "tomli_w>=1.0",
    "openai>=1.0",
]

[project.optional-dependencies]
google = ["google-genai>=1.0"]
anthropic = ["anthropic>=0.40"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
    "numpy>=1.24",
]

[project.scripts]
zvecsearch = "zvecsearch.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
